--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             const tryFetch = async (retries = 3, delay = 2000) => {
                 for (let i = 0; i < retries; i++) {
                     try {
-                        const response = await fetch('https://api.x.ai/v1/chat/completions', {
+                        const response = await fetch('https://cors-anywhere.herokuapp.com/https://api.x.ai/v1/chat/completions', {
                             method: 'POST',
                             headers: {
                                 'Authorization': `Bearer ${API_KEY}`,
