--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://js.puter.com; connect-src 'self' https://api.puter.com; style-src 'self' 'unsafe-inline';">
     <title>Sabre API Helper</title>
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: 20px auto; padding: 0 10px; }
         textarea, input { width: 100%; padding: 10px; margin: 10px 0; }
         button { padding: 10px 20px; background: #0066cc; color: white; border: none; border-radius: 4px; cursor: pointer; }
         pre { background: #f4f4f4; padding: 10px; overflow-x: auto; max-width: 100%; }
+        #response p { margin: 10px 0; }
         @media (max-width: 600px) { pre { font-size: 14px; } }
     </style>
 </head>
@@ -16,12 +18,18 @@
     <h1>Sabre API Helper</h1>
     <p>Enter your question about Sabre APIs (e.g., "Which API to search PNR?"):</p>
     <input type="text" id="question" placeholder="Ask about Sabre APIs...">
-    <button onclick="askQuestion()">Ask</button>
+    <button id="askButton" onclick="askQuestion()">Ask</button>
     <div id="response"></div>
     <script src="https://js.puter.com/v2/"></script>
     <script>
+        // Ensure Puter.js is loaded
+        if (typeof puter === 'undefined') {
+            document.getElementById('response').innerHTML = '<p style="color: red;">Error: Puter.js failed to load. Check network or try again later.</p>';
+        }
+
         const questionInput = document.getElementById('question');
         const responseDiv = document.getElementById('response');
+        const askButton = document.getElementById('askButton');
 
         async function askQuestion() {
             const question = questionInput.value.trim();
@@ -32,23 +40,35 @@
 
             responseDiv.innerHTML = '<p>Loading...</p>';
             try {
+                // Initialize Puter.js and prompt for authentication if needed
+                await puter.auth.signIn();
+
                 // Use Puter.js with Codestral for code generation
                 const response = await puter.ai.chat(
                     `You are an expert on Sabre APIs, referencing developer.sabre.com. Provide concise answers about Sabre APIs, including API options and sample code snippets (REST and SOAP) for tasks like searching a PNR. Use markdown code blocks (```). User question: ${question}`,
-                    { model: 'codestral-latest', stream: true }
+                    { model: 'codestral-latest', stream: true, max_tokens: 500 }
                 );
 
-                responseDiv.innerHTML = '';
+                responseDiv.innerHTML = '<p>';
                 for await (const part of response) {
                     responseDiv.innerHTML += part.text.replace(/\n/g, '<br>').replace(/```/g, '</p><pre>').replace(/```/g, '</pre><p>');
                     responseDiv.scrollTop = responseDiv.scrollHeight;
                 }
+                responseDiv.innerHTML += '</p>';
             } catch (error) {
-                responseDiv.innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
+                console.error('Puter.js Error:', error);
+                responseDiv.innerHTML = `<p style="color: red;">Error: ${error.message || 'Failed to fetch response. Try again or check network.'}</p>`;
             }
         }
 
-        // Allow sending question with Enter key
+        // Ensure button and input are accessible
+        if (!questionInput || !responseDiv || !askButton) {
+            console.error('DOM elements not found');
+            document.body.innerHTML += '<p style="color: red;">Error: Page elements not loaded correctly.</p>';
+        }
+
+        // Add event listeners
+        askButton.addEventListener('click', askQuestion);
         questionInput.addEventListener('keypress', (e) => {
             if (e.key === 'Enter') askQuestion();
         });
