--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Sabre API Helper</title>
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: 20px auto; padding: 0 10px; }
@@ -17,20 +18,35 @@
     <h1>Sabre API Helper</h1>
     <p>Enter your question about Sabre APIs (e.g., "Which API to search PNR?"):</p>
     <input type="text" id="question" placeholder="Ask about Sabre APIs...">
-    <button id="askButton" onclick="askQuestion()">Ask</button>
+    <button id="askButton">Ask</button>
     <div id="response"></div>
     <script src="https://js.puter.com/v2/"></script>
     <script>
-        // Ensure Puter.js is loaded
-        if (typeof puter === 'undefined') {
-            document.getElementById('response').innerHTML = '<p style="color: red;">Error: Puter.js failed to load. Check network or try again later.</p>';
-        }
+        // Debugging: Log when script starts
+        console.log('Script loaded at', new Date().toISOString());
 
+        // DOM elements
         const questionInput = document.getElementById('question');
         const responseDiv = document.getElementById('response');
         const askButton = document.getElementById('askButton');
 
+        // Validate DOM elements
+        if (!questionInput || !responseDiv || !askButton) {
+            console.error('DOM elements missing:', { questionInput, responseDiv, askButton });
+            document.body.innerHTML += '<p style="color: red;">Error: Page elements not loaded correctly.</p>';
+            throw new Error('DOM elements not found');
+        }
+
+        // Check if Puter.js loaded
+        if (typeof puter === 'undefined') {
+            console.error('Puter.js not loaded');
+            responseDiv.innerHTML = '<p style="color: red;">Error: Puter.js failed to load. Check network or try again later.</p>';
+            throw new Error('Puter.js not loaded');
+        }
+
+        // Define askQuestion function
         async function askQuestion() {
+            console.log('askQuestion called with question:', questionInput.value);
             const question = questionInput.value.trim();
             if (!question) {
                 responseDiv.innerHTML = '<p style="color: red;">Please enter a question.</p>';
@@ -39,10 +55,12 @@
 
             responseDiv.innerHTML = '<p>Loading...</p>';
             try {
-                // Initialize Puter.js and prompt for authentication if needed
+                // Authenticate with Puter.js
+                console.log('Attempting Puter.js authentication');
                 await puter.auth.signIn();
 
-                // Use Puter.js with Codestral for code generation
+                // Use Puter.js with Codestral
+                console.log('Sending request to Puter.js API');
                 const response = await puter.ai.chat(
                     `You are an expert on Sabre APIs, referencing developer.sabre.com. Provide concise answers about Sabre APIs, including API options and sample code snippets (REST and SOAP) for tasks like searching a PNR. Use markdown code blocks (```). User question: ${question}`,
                     { model: 'codestral-latest', stream: true, max_tokens: 500 }
@@ -60,17 +78,20 @@
             }
         }
 
-        // Ensure button and input are accessible
-        if (!questionInput || !responseDiv || !askButton) {
-            console.error('DOM elements not found');
-            document.body.innerHTML += '<p style="color: red;">Error: Page elements not loaded correctly.</p>';
-        }
-
         // Add event listeners
-        askButton.addEventListener('click', askQuestion);
-        questionInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') askQuestion();
+        askButton.addEventListener('click', () => {
+            console.log('Ask button clicked');
+            askQuestion();
         });
+        questionInput.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                console.log('Enter key pressed');
+                askQuestion();
+            }
+        });
+
+        // Debugging: Confirm listeners are attached
+        console.log('Event listeners attached to askButton and questionInput');
     </script>
 </body>
 </html>
