--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
+
+<!DOCTYPE html>
 <html>
+<head>
+    <title>Ask a Question</title>
+    https://js.puter.com/v2/
+</head>
 <body>
-    <script src="https://js.puter.com/v2/"></script>
+    <h2>Ask a Question</h2>
+    <input type="text" id="questionInput" placeholder="Type your question here" style="width: 300px;">
+    <button onclick="askQuestion()">Ask</button>
+    <pre id="responseOutput"></pre>
+
     <script>
-        puter.ai.chat("What are the benefits of exercise?", { model: "gpt-4.1-nano" })
-            .then(response => {
-                puter.print(response);
-            });
+        function askQuestion() {
+            const question = document.getElementById("questionInput").value;
+            const output = document.getElementById("responseOutput");
+            output.textContent = "Thinking...";
+
+            puter.ai.chat(question, { model: "gpt-4.1-nano" })
+                .then(response => {
+                    output.textContent = response;
+                })
+                .catch(error => {
+                    output.textContent = "Error: " + error.message;
+                });
+        }
     </script>
 </body>
 </html>
