--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     https://js.puter.com/v2/
 </head>
 <body>
+    <script src="https://js.puter.com/v2/"> </script>
     <h2>Ask a Question</h2>
     <input type="text" id="questionInput" placeholder="Type your question here" style="width: 300px;">
     <button onclick="askQuestion()">Ask</button>
     <pre id="responseOutput"></pre>
 
+    
     <script>
         function askQuestion() {
             const question = document.getElementById("questionInput").value;
@@ -20,6 +22,7 @@
             puter.ai.chat(question, { model: "gpt-4.1-nano" })
                 .then(response => {
                     output.textContent = response;
+                    puter.print(response);
                 })
                 .catch(error => {
                     output.textContent = "Error: " + error.message;
