--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             // Show thinking message
             output.textContent = "Thinking...";
 
-            puter.ai.chat("You are Sabre API expert, reference to developer.sabre.com", { model: "gpt-4.1" });
+            puter.ai.chat("You are Sabre API expert, reference to developer.sabre.com", { model: "gpt-4.1" })
     .then(response => {
         puter.print();
     });
