--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .then(response => {
         puter.print();
     });
-            puter.ai.chat(question, { model: "gpt-4.1" })
+            puter.ai.chat(question, { model: "gpt-4o" })
                 .then(response => {
                     output.textContent = response;
                 })
