--- a/index.html
+++ b/index.html
@@ -1,20 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Ask a Question</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sabre API Helper</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 2rem;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 1rem;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 0.75rem;
+            margin-bottom: 1rem;
+            border: 1px solid #ccc;
+                       font-size: 1rem;
+        }
+
+        button {
+            width: 100%;
+            padding: 0.75rem;
+            background-color: #0078d4;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #005fa3;
+        }
+
+        pre {
+            margin-top: 1rem;
+            padding: 1rem;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+    </style>
 </head>
 <body>
-    <h2>Ask a Question</h2>
-    <input type="text" id="questionInput" placeholder="Type your question here" style="width: 300px;">
-    <button onclick="askQuestion()">Ask</button>
-    <pre id="responseOutput"></pre>
-    
+    <div class="container">
+        <h2>Sabre API Helper</h2>
+        <input type="text" id="questionInput" placeholder="Type your question here" />
+        <button onclick="askQuestion()">Ask</button>
+        <pre id="responseOutput"></pre>
+    </div>
+
     <script src="https://js.puter.com/v2/"> </script>
     <script>
         function askQuestion() {
             const question = document.getElementById("questionInput").value;
             const output = document.getElementById("responseOutput");
-            const request = `You are Sabre API expert, reference to developer.sabre.com, ${question}? Provide step by step guideline and sample codes`;
+            const request = `You are Sabre API expert, reference to developer.sabre.com, ${question}? Provide step by step guideline and sample Sabre API codes`;
             
             // Clear previous result
             output.textContent = "";
@@ -33,4 +91,3 @@
     </script>
 </body>
 </html>
-
