--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <div class="container">
         <h2>Sabre API Helper</h2>
         <input type="text" id="questionInput" placeholder="Type your question here" />
+        <i>E.g. use what api to search pnr</i><br><br>
         <button onclick="askQuestion()">Ask</button>
         <pre id="responseOutput"></pre>
     </div>
