--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         button {
             width: 100%;
             padding: 0.75rem;
-            background-color: #0078d4;
+            background-color: darkred;
             color: white;
             border: none;
             border-radius: 4px;
@@ -46,7 +46,7 @@
         }
 
         button:hover {
-            background-color: #005fa3;
+            background-color: red;
         }
 
         pre {
