--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
         <h2>Sabre API Helper</h2>
-        <input type="text" id="questionInput" placeholder="Type your question here" /><br><br>
+        <input type="text" id="questionInput" placeholder="Type your question here" /><br>
         <i>E.g. use what api to search pnr</i><br><br>
         <button onclick="clearInput()">Clear</button><br><Br>
         <button onclick="askQuestion()">Ask</button>
