--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         button {
-            width: 100%;
+            width: 49%;
             padding: 0.75rem;
             background-color: darkred;
             color: white;
@@ -64,8 +64,7 @@
         <h2>Sabre API Helper</h2>
         <input type="text" id="questionInput" placeholder="Type your question here" /><br>
         <i>E.g. use what api to search pnr</i><br><br>
-        <button onclick="clearInput()">Clear</button><br><Br>
-        <button onclick="askQuestion()">Ask</button>
+        <button onclick="clearInput()">Clear</button>&nbsp;&nbsp;<button onclick="askQuestion()">Ask</button>
         <pre id="responseOutput"></pre>
     </div>
 
