--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         function askQuestion() {
             const question = document.getElementById("questionInput").value;
             const output = document.getElementById("responseOutput");
-            const request = `You are Sabre API expert, reference to developer.sabre.com, ${question}? Provide step by step guideline and sample Sabre API REST codes`;
+            const request = `You are Sabre API expert, reference to developer.sabre.com and stackoverflow.com, please advise ${question}? Verify your recommended API are valid in developer.sabre.com first then provide step by step guideline and sample Sabre API REST codes`;
             
             // Clear previous result
             output.textContent = "";
