--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         function askQuestion() {
             const question = document.getElementById("questionInput").value;
             const output = document.getElementById("responseOutput");
-            const request = `You are Sabre API expert, reference to developer.sabre.com, please advise ${question} and provide step by step guideline`;
+            const request = `You are Sabre API expert, reference to current year 2025 developer.sabre.com, please advise ${question} and provide step by step guideline`;
             
             // Clear previous result
             output.textContent = "";
