--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         function askQuestion() {
             const question = document.getElementById("questionInput").value;
             const output = document.getElementById("responseOutput");
-            const request = `You are Sabre API expert, reference to current year 2025 developer.sabre.com, please advise ${question} and provide step by step guideline but don't show the API URL ask user to refer to Sabre Developer Studio`;
+            const request = `You are Sabre API expert, reference to current year 2025 developer.sabre.com, please advise ${question}, provide step by step guideline and sample SOAP or REST codes but don't show the API URL ask user to refer to Sabre Developer Studio`;
             
             // Clear previous result
             output.textContent = "";
